Fixed a bug that made the page "jump" on Edge.

--- a/docs/emotewall.css
+++ b/docs/emotewall.css
@@ -1,3 +1,7 @@
+body {
+    overflow: hidden;
+}
+
 .emote, .emoji {
     display: inline-block;
     position: absolute;
